# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"
CORE_SERVICE_API_DIR = "$SUBSYSTEM_DIR/core_service/interfaces/kits"
ohos_shared_library("tel_core_service_api") {
  subsystem_name = "telephony"
  part_name = "core_service"
  sources = [
    "$CORE_SERVICE_API_DIR/src/i_network_search_callback_stub.cpp",
    "$CORE_SERVICE_API_DIR/src/radio_network_manager.cpp",
    "$CORE_SERVICE_API_DIR/src/sim_card_manager.cpp",
    "$CORE_SERVICE_API_DIR/src/str_convert.cpp",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search/src/network_search_service_death_recipient.cpp",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search/src/network_search_service_proxy_holder.cpp",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/proxy/core_service_proxy.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/core_service/common/log/include",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/common",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search/include",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/api",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/proxy",
    "$SUBSYSTEM_DIR/core_service/interfaces/kits/js/napi/sim/include",
    "$CORE_SERVICE_API_DIR/include",
    "$SUBSYSTEM_DIR/ril_adapter/interfaces/innerkits",
  ]
  deps = [
    "$SUBSYSTEM_DIR/core_service:tel_core_service",
    "$SUBSYSTEM_DIR/ril_adapter/hril:hril",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
}
