# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

TELEPHONY_CORE_SERVICE_ROOT = "//base/telephony/core_service"
TELEPHONY_SIM_ROOT = "//base/telephony/core_service/sim"
TELEPHONY_NETWORK_SEARCH_ROOT = "//base/telephony/core_service/network_search"
HDF_FRAMEWORKS = "//drivers/hdf/frameworks"

ohos_executable("tel_sim_test") {
  install_enable = true
  sources = [
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/proxy/core_service_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_state.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/signal_information.cpp",
    "$TELEPHONY_SIM_ROOT/test/test.cpp",
  ]

  include_dirs = [
    "$TELEPHONY_CORE_SERVICE_ROOT/base/include",

    "$TELEPHONY_CORE_SERVICE_ROOT/tel_ril/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/common",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/proxy",

    "$HDF_FRAMEWORKS/ability/sbuf/include",
    "$HDF_FRAMEWORKS/core/shared/include",
    "$HDF_FRAMEWORKS/core/host/include",
    "$HDF_FRAMEWORKS/core/master/include",
    "$HDF_FRAMEWORKS/include/core",
    "$HDF_FRAMEWORKS/include/utils",
    "$HDF_FRAMEWORKS/utils/include",
    "$HDF_FRAMEWORKS/include/osal",
  ]
  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  part_name = "core_service"
  subsystem_name = "telephony"
}
