# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../../../"
import("$SUBSYSTEM_DIR/core_service/telephony_core_service.gni")

ohos_shared_library("esim") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  if (core_service_support_esim) {
    include_dirs = [
      "include",
      "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
      "$SUBSYSTEM_DIR/core_service/interfaces/kits/native",
      "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/include",
    ]

    sources = [
      "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/napi_util.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/download_profile_config_info_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/download_profile_result_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/downloadable_profile_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/euicc_info_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/get_downloadable_profiles_result_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/profile_info_list_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/profile_metadata_result_parcel.cpp",
      "$SUBSYSTEM_DIR/core_service/frameworks/native/src/response_esim_result.cpp",
      "src/napi_esim.cpp",
    ]
  }

  configs = [ "$SUBSYSTEM_DIR/core_service/utils:telephony_log_config" ]

  deps = [
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits:tel_core_service_api",
    "$SUBSYSTEM_DIR/core_service/utils:libtel_common",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CoreServiceEsimJsApi\"",
    "LOG_DOMAIN = 0xD001F04",
  ]
  subsystem_name = "telephony"
  part_name = "core_service"
  relative_install_dir = "module/telephony"
}
