# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
SUBSYSTEM_DIR = "../../../.."
import("//build/ohos.gni")
import("$SUBSYSTEM_DIR/core_service/telephony_core_service.gni")

ohos_shared_library("radio") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "include",
    "$SUBSYSTEM_DIR/core_service/interfaces/kits/native",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/include",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
    "$SUBSYSTEM_DIR/core_service/common/sim",
  ]

  sources = [
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/napi_util.cpp",
    "src/get_network_search_info_callback.cpp",
    "src/get_network_search_mode_callback.cpp",
    "src/get_nr_option_mode_callback.cpp",
    "src/get_preferred_network_callback.cpp",
    "src/get_radio_state_callback.cpp",
    "src/napi_ims_reg_info_callback.cpp",
    "src/napi_ims_reg_info_callback_manager.cpp",
    "src/napi_radio.cpp",
    "src/set_network_search_mode_callback.cpp",
    "src/set_nr_option_mode_callback.cpp",
    "src/set_preferred_network_callback.cpp",
    "src/set_radio_state_callback.cpp",
  ]

  configs = [ "$SUBSYSTEM_DIR/core_service/utils:telephony_log_config" ]

  deps = [
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits:tel_core_service_api",
    "$SUBSYSTEM_DIR/core_service/utils:libtel_common",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CoreServiceRadioJsApi\"",
    "LOG_DOMAIN = 0xD001F04",
  ]

  defines += telephony_extra_defines

  subsystem_name = "telephony"
  part_name = "core_service"
  relative_install_dir = "module/telephony"
}
