# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../../../"
ohos_shared_library("vcard") {
  include_dirs = [
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
    "include",
    "$SUBSYSTEM_DIR/core_service/interfaces/kits/native",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/include",
    "$SUBSYSTEM_DIR/core_service/utils/vcard/include",
    "$SUBSYSTEM_DIR/core_service/utils/vcard/include/contact_data",
  ]

  sources = [
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/napi_util.cpp",
    "src/napi_vcard.cpp",
  ]

  configs = [ "$SUBSYSTEM_DIR/core_service/utils:telephony_log_config" ]

  deps = [
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits:tel_core_service_api",
    "$SUBSYSTEM_DIR/core_service/utils:libtel_common",
    "$SUBSYSTEM_DIR/core_service/utils:libtel_vcard",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CoreServiceVcardJsApi\"",
    "LOG_DOMAIN = 0xD001F04",
  ]
  subsystem_name = "telephony"
  part_name = "core_service"
  relative_install_dir = "module/telephony"
}
