# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

## Install ons.bin to /system/etc/param/ons.bin

group("ons_bin") {
  deps = [ ":ons.bin" ]
}

ohos_prebuilt_etc("ons.bin") {
  source = "ons.bin"
  part_name = "core_service"
  subsystem_name = "telephony"
  module_install_dir = "etc/ons"
}
