# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

## Install operator_name.json to /system/etc/operator_name.json
ohos_prebuilt_etc("operator_name_default") {
  source = "operator_name.json"
  relative_install_dir = "./telephony"
  part_name = "core_service"
  subsystem_name = "telephony"
}

group("operator_name") {
  deps = [ ":operator_name_default" ]
}
