# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

## Install telephony.para to /system/etc/param/telephony.para
## Install telephony.para.dac to /system/etc/param/telephony.para.dac

group("param_files") {
  deps = [
    ":telephony.para",
    ":telephony.para.dac",
  ]
}

ohos_prebuilt_etc("telephony.para") {
  source = "telephony.para"
  part_name = "core_service"
  subsystem_name = "telephony"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("telephony.para.dac") {
  source = "telephony.para.dac"
  part_name = "core_service"
  subsystem_name = "telephony"
  module_install_dir = "etc/param"
}
