# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/core_service_aafwk.gni")
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_executable("tel_network_search_test") {
  install_enable = true
  sources = [
    "ims_reg_info_callback_test.cpp",
    "network_search_test_callback_stub.cpp",
    "test.cpp",
    "test_broadcast.cpp",
  ]

  include_dirs = [
    "${ability_runtime_inner_api_path}/ability_manager/include",
    "${ability_runtime_services_path}/abilitymgr/include",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/time/time_service/services:time_service",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"NetworkSearchTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  # install_enable = true

  part_name = "core_service"
  subsystem_name = "telephony"
}
