# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SOURCE_DIR = "../../../.."

ohos_executable("tel_network_search_test") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  install_enable = true
  sources = [
    "ims_reg_info_callback_test.cpp",
    "network_search_test_callback_stub.cpp",
    "test.cpp",
    "test_broadcast.cpp",
  ]

  configs = [ "$SOURCE_DIR/core_service/utils:telephony_log_config" ]

  deps =
      [ "$SOURCE_DIR/core_service/interfaces/innerkits:tel_core_service_api" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "time_service:time_client",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"NetworkSearchTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]

  # install_enable = true

  part_name = "core_service"
  subsystem_name = "telephony"
}
